// Copyright 2025 Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package agntcy.identity.platform.v1alpha1;

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity-platform/api/server/agntcy/identity/platform/v1alpha1;identity_platform_sdk_go";

// Identity Platform Policy.
message Policy {
  // A unique identifier for the App.
  optional string id = 1;

  // A human-readable name for the App.
  optional string name = 4;

  // A human-readable description for the App.
  optional string description = 5;

  // All the rules that apply to this Policy.
  repeated Rule rules = 6;
}

// Identity Platform Policy Rule
message Rule {
  // A unique identifier for the App.
  optional string id = 1;

  // A human-readable name for the App.
  optional string name = 4;

  // A human-readable description for the App.
  optional string description = 5;

  // The requester application that this Rule applies to.
  optional string requester_id = 2;

  // The target application that this Rule applies to.
  repeated string target_ids = 3;

  // The allowed tools for this Rule.
  repeated string allowed_tool_names = 7;
}
